Updated the html document

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1> Hello, World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem soluta, amet dolores odio laudantium aliquam exercitationem dolore odit perspiciatis accusamus. Dignissimos optio sapiente consectetur provident repellat saepe iusto culpa.</p>
 </body>
 </html>
