Added the syles and the script js

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
     <h1> Hello, World!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quidem soluta, amet dolores odio laudantium aliquam exercitationem dolore odit perspiciatis accusamus. Dignissimos optio sapiente consectetur provident repellat saepe iusto culpa.</p>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
